<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <TextView
        android:id="@+id/txtTopCopy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_condensed_bold"
        android:text="@string/txtTopCopy"
        android:textColor="@color/kabbablue"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.72" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="369dp"
        android:layout_height="57dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/searchBar"
            android:layout_width="217dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/background_edt_search"
            android:drawableStart="@drawable/search"
            android:drawablePadding="10dp"
            android:hint="@string/searchBar"
            android:paddingStart="20dp"
            android:textStyle="normal" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/giftButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:clickable="true"
            app:backgroundTint="@color/kabbablue"
            app:tint="@android:color/white"
            app:fabSize="auto"
            app:srcCompat="@drawable/ic_baseline_card_giftcard_24" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/mybutton"
            android:fontFamily="@font/roboto_condensed_bold"
            android:text="@string/giftButton"
            android:textAlignment="gravity"
            android:textColor="@color/teal_700"
            android:textSize="16sp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="110dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="413dp"
            android:layout_height="614dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:id="@+id/prodCategories"
                android:layout_width="361dp"
                android:layout_height="93dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_condensed_bold"
                android:paddingLeft="32dp"
                android:paddingTop="10dp"
                android:text="@string/prodCategories"
                android:textColor="@color/teal_700"
                android:textSize="16sp" />

            <ListView
                android:id="@+id/prodListView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

