<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductDetails">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="313dp"
        android:layout_height="329dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.413"
        app:srcCompat="@drawable/forestgartenarmlehnstuhl" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="40dp"
        android:layout_height="41dp"
        android:background="@color/ic_fast_forestBlack_background"
        app:layout_constraintBottom_toTopOf="@+id/box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.838"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.186"
        app:srcCompat="@drawable/ic_baseline_favorite_border_24" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/box"
        android:layout_width="76dp"
        android:layout_height="60dp"
        android:background="@drawable/radius"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.853"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.526">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="23dp"
            android:layout_height="19dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.82"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.219"
            app:srcCompat="@drawable/ic_outline_share_24" />

        <RatingBar
            android:id="@+id/ratingBar2"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="16dp"
            android:layout_height="15dp"
            android:clickable="true"
            android:numStars="1"
            android:progressTint="#d7be69"
            android:rating="5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.46"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:id="@+id/txtRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_condensed_bold"
            android:text="4.8"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.216"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar2"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/txtNumRatings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_condensed_light"
            android:text="54"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.45"
            app:layout_constraintStart_toEndOf="@+id/txtRating"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.608" />

        <TextView
            android:id="@+id/txt_Ratings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_condensed_light"
            android:text="Reviews"
            android:textColor="@color/white"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.86" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/prodName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_condensed_regular"
        android:text="Names"
        android:textColor="@color/kabbablue"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.538" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="372dp"
        android:layout_height="294dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.963">

        <TextView
            android:id="@+id/prodDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_condensed_bold"
            android:paddingLeft="14dp"
            android:text="@string/prodDetails"
            android:textColor="@color/kabbablue"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/prodBeschreibung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:singleLine="false"
            android:text="Für den Outdoor-Sessel Forest wurde traditionelle Handwerkskunst mit modernster Technologie kombiniert. Der Armlehnstuhl von Fast ist aus pulverbeschichtetem Aluminium gefertigt und weist eine verästeltete Struktur der Sitzschale auf. Die Assoziation mit einem Wald engl. Forest liegt also nahe."
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/prodColors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_condensed_bold"
                android:paddingLeft="14dp"
                android:paddingRight="18dp"
                android:text="@string/colors"
                android:textColor="@color/kabbablue"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radCol1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

            <RadioButton
                android:id="@+id/radcol2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

            <RadioButton
                android:id="@+id/radcol3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

            <RadioButton
                android:id="@+id/radio0"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/custom_button_background"
                android:button="@android:color/transparent"
                android:checked="false"
                android:text="exp" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/prodPrice"
                android:layout_width="67dp"
                android:layout_height="24dp"
                android:fontFamily="@font/roboto_condensed_bold"
                android:text="prodPrice"
                android:textColor="@color/teal_700"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/butAdd"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.384" />

            <Button
                android:id="@+id/butAdd"
                android:layout_width="244dp"
                android:layout_height="55dp"
                android:background="@drawable/radius"
                android:fontFamily="@font/roboto_condensed_bold"
                android:text="@string/addButton"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.82"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.347" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/add_Ico"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="45dp"
                android:layout_marginEnd="14dp"
                android:backgroundTint="@color/teal_700"
                android:clickable="true"
                app:borderWidth="0dp"
                app:fabSize="mini"
                app:layout_constraintBottom_toBottomOf="@+id/butAdd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.91"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/butAdd"
                app:layout_constraintVertical_bias="0.56"
                app:srcCompat="@drawable/ic_baseline_add_shopping_cart_24" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>